# dictionary

./: dictionary.cabal  flake.nix
app/: Main.hs
lib/: Document.hs  Env.hs  Html.hs  Http.hs
lib/Html/: Internal.hs
